--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-flask==2.3.3
-sentence-transformers==2.2.2
-numpy==1.24.3
-scikit-learn==1.3.0
-torch==2.0.1
-transformers==4.30.2
+pandas
+plotly
+numpy
+streamlit
+
+
+
