--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,9 @@
 streamlit
-pandas
-plotly
 numpy
 flask
 sentence-transformers
-faiss-cpu
-
 scikit-learn
 pytest
-
+requests
+beautifulsoup4
+gunicorn
